<resources>
    <string name="app_name">Movie Flix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_movies_tv_series_and_more">Find Movies, Tv series, and more…</string>
    <string name="search"><font color="#FFFFFF">  Search</font></string>
    <string name="power">Power</string>
    <string name="hd">HD</string>
    <string name="_152_minutes">152 minutes</string>
    <string name="_7_0_imdb">7.0 IMDb</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="december_7_2017">December 7,2017</string>
    <string name="overview">overview</string>
    <string name="related_movies">Related Movies</string>
    <string name="sports">Sports</string>
    <string name="documentary">Documentary</string>
    <string name="tv_series">Tv Series</string>
    <string name="movies">Movies</string>
</resources>