<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
   <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.DetailsFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/movieImg"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:scaleType="centerCrop"
                android:src="@drawable/poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backBtn_movie_Details"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_arrow_left_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/adultCheckLayout_movieDetails"
                android:layout_width="38dp"
                android:layout_height="22dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/adult_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/adultCheck_movie_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/dm_sans_medium"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="18+"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:background="@drawable/poster_dash_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2_title_movieDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/movieImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movieName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/dm_sans_bold"
                        android:maxLines="2"
                        android:text="@string/power"
                        android:textColor="@color/mainText"
                        android:textSize="27sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="28dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/hd_bg">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:fontFamily="@font/dm_sans_medium"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="@string/hd"
                            android:textColor="@color/mainText"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/duration_movie_Details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/dm_sans_medium"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/_152_minutes"
                        android:textColor="@color/textAd"
                        android:textSize="12sp"
                        app:drawableLeftCompat="@drawable/baseline_access_time" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/dm_sans_medium"
                        android:maxLines="2"
                        android:gravity="center"
                        android:text="@string/_7_0_imdb"
                        android:textColor="@color/textAd"
                        android:textSize="12sp"
                        app:drawableLeftCompat="@drawable/round_star_rate_24" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/searchbarColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/releaseDateLV_movie_Details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/dm_sans_bold"
                        android:maxLines="2"
                        android:text="@string/release_date"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/textAd" />

                    <TextView
                        android:id="@+id/genreLv_movie_Details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/dm_sans_bold"
                        android:maxLines="2"
                        android:text="@string/genre"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/textAd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/releaseDate_movie_Details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/dm_sans_bold"
                        android:maxLines="2"
                        android:text="@string/december_7_2017"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textColor="@color/textAd" />

                    <TextView
                        android:id="@+id/genre_movie_Details"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/dm_sans_bold"
                        android:maxLines="2"
                        android:text="Action"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textColor="@color/textAd" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/descLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2_title_movieDetails">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="Synopsis"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movieOverview_MovieDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:maxLines="8"
                    android:text="@string/overview"
                    android:textColor="@color/textAd"
                  android:textAppearance="@style/TextAppearance.Material3.BodySmall"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:gravity="center_vertical"
                    android:text="@string/related_movies"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/relatedRecView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/related_movie" />

            </LinearLayout>

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/progressbar"
                style="@style/SpinKitView.Large.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="400dp"
                android:visibility="invisible"
                app:SpinKit_Color="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>